--- a/src/shop-checkout.html
+++ b/src/shop-checkout.html
@@ -121,7 +121,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               id="checkoutForm"
               is="iron-form"
               method="post"
-              action="/data/sample_success_response.json"
+              action="http://partner.daoapp.io/shop/order/reserve"
               on-iron-form-response="_didReceiveResponse"
               on-iron-form-presubmit="_willSendRequest">
 
