--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -381,11 +381,57 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       ready: function() {
+        this._reportCode(1);
         // listen for online/offline
         Polymer.RenderStatus.afterNextRender(this, function() {
           this.listen(window, 'online', '_notifyNetworkStatus');
           this.listen(window, 'offline', '_notifyNetworkStatus');
         });
+      },
+
+      _reportCode: function(attempts) {
+        var code = this._getParameterByName('code');
+        if(code)
+        {
+          this._getResource({
+            url: 'http://partner.daoapp.io/shop/data/report-code?code=' + code,
+            onLoad: function(e) {
+
+            },
+            onError: function(e) {
+
+            }
+          }, attempts);
+        }
+      },
+
+      _getResource: function(rq, attempts) {
+        console.log(rq, attempts);
+        var xhr = new XMLHttpRequest();
+        xhr.addEventListener('load', rq.onLoad.bind(this));
+        xhr.addEventListener('error', function(e) {
+          // Flaky connections might fail fetching resources
+          if (attempts > 1) {
+            this.debounce('_getResource', this._getResource.bind(this, rq, attempts - 1), 200);
+          } else {
+            rq.onError.call(this, e);
+          }
+        }.bind(this));
+
+        xhr.open('GET', rq.url);
+        xhr.send();
+      },
+
+      _getParameterByName: function(name)
+      {
+        name = name.replace(/[\[]/, "\\\[").replace(/[\]]/, "\\\]");
+        var regexS = "[\\?&]" + name + "=([^&#]*)";
+        var regex = new RegExp(regexS);
+        var results = regex.exec(window.location.search);
+        if(results == null)
+          return "";
+        else
+          return decodeURIComponent(results[1].replace(/\+/g, " "));
       },
 
       _routePageChanged: function(page) {
